<resources>
    <string name="app_name">Bike Comp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0.0</string>
    <string name="average_speed">Average Speed</string>
    <string name="speed">Speed</string>
    <string name="kmh">(km/h)</string>
    <string name="clock">Clock</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="action_google_play">Google Play</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="distance">Distance</string>
    <string name="km">(km)</string>
    <string name="enabled_gps_provider">GPS receiver on</string>
    <string name="disabled_gps_provider">GPS receiver off</string>
    <string name="status_available">Caught GPS signal</string>
    <string name="status_out_of_service">GPS signal lost</string>
    <string name="status_temporary_unavailable">GPS is temporary unavailable</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="continue_session">Continue</string>
    <string name="session_started">Let\'s go!</string>
    <string name="session_stopped">Finish!</string>
    <string name="report">Ride is completed</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="finish_date">Finish Date</string>
    <string name="finish_time">Finish Time</string>
    <string name="average_pace">Average Pace</string>
    <string name="are_you_sure">Are you sure to finish current ride?</string>
    <string name="tap_continue_or_finish">Tap \'No\' to return to main screen or \'Yes\' to finish current ride.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="history">History</string>
    <string name="time">Time</string>
    <string name="period">Period</string>
    <string name="statistics">Statistics</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_year">This year</string>
    <string name="no_limits">No limits</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete</string>
    <string name="resume">Resume</string>
    <string name="actions">Actions</string>
    <string name="display">Display</string>
    <string name="display_settings">Display Settings</string>
    <string name="display_settings_summary">Backlight, theme …</string>
    <string name="backlight_strategy_title">Backlight Strategy</string>
    <string name="backlight_strategy_summary">Backlight Strategy Settings</string>
    <string name="theme_by_calendar">Theme change</string>
    <string name="theme_by_calendar_summary">Auto change theme using calendar</string>
    <string name="theme_by_calendar_enabled_summary">Using calendar</string>
    <string name="theme_by_calendar_disabled_summary">By Hands</string>
    <string name="theme_summary">Select Theme</string>
    <string name="theme_title">Theme</string>
    <string name="session_active">Ride is on the run</string>
    <string name="session_active_text">Tap to see the details.</string>
    <string name="primaryScreen">Primary screen</string>
    <string name="secondaryScreen">Secondary screen</string>
    <string name="session_paused_resumed">Paused / Resumed</string>
    <string name="nothing" />
    <string name="sound">Sound</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="sound_settings_summary">Sound notifications, etc.</string>
    <string name="disable_enable_sound_summary">Enable / disable sound</string>
    <string name="disable_enable_sound_disabled_summary">Sound disabled</string>
    <string name="disable_enable_sound_enabled_summary">Sound enabled</string>
    <string name="disable_enable_sound">Enable / disable sound</string>
    <string name="general_settings">General</string>
    <string name="general_settings_summary">General settings</string>
    <string name="how_long_dialog_to_wait">Dialog\'s hiding timeout</string>
    <string name="share">Share</string>
    <string name="are_you_sure_exit_app">Quit application</string>
    <string name="rotate_screens_summary">Rotate screens</string>
    <string name="rotate_screens_enabled_summary">Rotate screens</string>
    <string name="rotate_screens_disabled_summary">Don\'t rotate screens</string>
    <string name="rotate_screens_title">Rotate screens</string>
    <string name="how_often_screens_rotate">Rotating Frequency</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="sign_in_required">Sign In required</string>
    <string name="ride_successfully_saved_to_google_fit">Your ride has been saved to Google Fit</string>
    <string name="ride_not_successfully_saved_to_google_fit">Saving to Google Fit was failed</string>
    <string name="bicycle">Bicycle</string>
    <string name="theme_has_been_changed">Theme has been changed</string>
    <string name="calendar_time_offset_title">Calendar time offset</string>
</resources>