<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Filter -->
    <item
        android:icon="@android:drawable/ic_menu_recent_history"
        android:showAsAction="ifRoom"
        android:title="@string/period">
        <menu>
            <item
                android:id="@+id/menuToday"
                android:title="@string/today" />
            <item
                android:id="@+id/menuYesterday"
                android:title="@string/yesterday" />

            <item
                android:id="@+id/menuThisYear"
                android:title="@string/thisyear" />

            <item
                android:id="@+id/menuNoLimits"
                android:title="@string/nolimits" />
        </menu>
    </item>

    <item
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/clear">

        <item
            android:id="@+id/menuClearAll"
            android:title="@string/clear_all" />

    </item>

</menu>