<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <!-- Start -->
    <ImageButton
        android:id="@+id/buttonStart"
        style="?attr/ButtonStandard"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/start_icon"
        android:text="@string/start" />

    <!-- Pause -->
    <ImageButton
        android:id="@+id/buttonPause"
        style="?attr/ButtonStandard"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/pause_icon"
        android:text="@string/pause" />

    <!-- Stop -->
    <ImageButton
        android:id="@+id/buttonStop"
        style="?attr/ButtonStandard"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/finish_icon"
        android:text="@string/finish" />

</LinearLayout>